@@ -1,5 +1,8 @@
 2011-01-26 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/base-dialog.c:
+	* src/nact/base-dialog.h: Do some code and comments cleanup.
+
 	* src/nact/base-builder.c (base_builder_get_toplevel_by_name):
 	Add a debug message.
 
